Fixed: Autoscroll broken layout
This needed to be changed due to the toolbar CSS refactor/simplification introduced in 4.1 beta.

--- a/source/css/plugins/autoscroll.less
+++ b/source/css/plugins/autoscroll.less
@@ -1,8 +1,6 @@
 /* Begin autoscroll plugin */
 
 .diva-autoscroll-icon {
-    float: right;
-    border-right: none;
     background-image: data-uri("@{iconPath}plugins/autoscroll-play.png");
 }
 
